src/styles/button/index.css
@import "./properties.css";

.button {
  align-items: center;
  border: none;
  border-radius: var(--button-border-radius);
  box-sizing: border-box;
  color: var(--button-color);
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: var(--button-font-family);
  font-style: var(--button-font-style);
  font-weight: var(--button-font-weight);
  letter-spacing: var(--button-letter-spacing);
  user-select: var(--button-user-select);
  vertical-align: text-top;
  white-space: nowrap;
  word-break: keep-all;
}

.button:focus {
  outline: none;
}

.button::-moz-focus-inner {
  border: 0;
}

/* icon alignment */

.button svg {
  margin: var(--button-icon-margin);
}

/* button icon */

.button.iconButton {

  &.tiny,
  &.default,
  &.huge {
    padding: var(--button-icon-padding);
  }

  &.tiny {
    width: var(--button-icon-width-tiny);
  }

  &.default {
    width: var(--button-icon-width-default);
  }

  &.huge {
    width: var(--button-icon-width-huge);
  }

  & svg {
    margin: var(--button-only-icon-margin);
  }

  &.circle {
    border-radius: var(--butoon-icon-circle-border-radius);
  }
}

/* button sizes */

.tiny {
  font-size: var(--button-tiny-font-size);
  height: var(--button-tiny-height);
  padding: var(--button-tiny-padding);
  text-transform: var(--button-tiny-text-transform);
}

.default {
  font-size: var(--button-default-font-size);
  height: var(--button-default-height);
  padding: var(--button-default-padding);
  text-transform: var(--button-default-text-transform);
}

.huge {
  font-size: var(--button-huge-font-size);
  height: var(--button-huge-height);
  padding: var(--button-huge-padding);
  text-transform: var(--button-huge-text-transform);
}

/* button relevances */

.normalRelevance {

  &.flat,
  &.gradient,
  &.outline {

    &:hover {
      background-color: var(--button-normal-relevance-background-color-hover);
    }

    &:active {
      background-color: var(--button-normal-relevance-background-color-active);
    }
  }

  &.flat,
  &.gradient {

    &:focus:not(:active) {
      box-shadow: var(--button-normal-relevance-boxshadow-focus);
    }
  }

  &.flat {
    background-color: var(--button-normal-relevance-flat-background-color);
  }

  &.gradient {
    background-image: var(--button-normal-relevance-gradient);

    &:hover,
    &.active {
      background-image: none;
    }
  }

  &.outline {
    background: transparent;
    border-color: var(--button-normal-relevance-outline-border-color);
    border-style: solid;
    border-width: var(--button-normal-relevance-outline-border-width);
    color: var(--button-normal-relevance-outline-color);

    &:hover,
    &:active,
    &:focus {
      color: var(--button-normal-relevance-outline-color-enter);
    }

    &:hover,
    &:active {
      border-color: transparent;
    }

    &:focus:not(:active) {
      background-color: var(--button-normal-relevance-outline-background-color-focus);
      border-color: var(--button-normal-relevance-outline-border-color-focus);
      box-shadow: var(--button-normal-relevance-outline-boxshadow-focus);
    }
  }

  &.clean {
    background: transparent;
    color: var(--button-normal-relevance-clean-color);

    &:hover {
      color: var(--button-normal-relevance-clean-color-hover);
    }

    &:active {
      color: var(--button-normal-relevance-clean-color-active);
    }

    &:focus:not(:active) {
      color: var(--button-normal-relevance-clean-color-focus);
    }
  }
}

.highRelevance {

  &.flat,
  &.gradient,
  &.outline {

    &:hover {
      background-color: var(--button-high-relevance-background-color-hover);
    }

    &:active {
      background-color: var(--button-high-relevance-background-color-active);
    }
  }

  &.flat,
  &.gradient {

    &:focus:not(:active) {
      box-shadow: var(--button-high-relevance-boxshadow-focus);
    }
  }

  &.flat {
    background-color: var(--button-high-relevance-flat-background-color);
  }

  &.gradient {
    background-image: var(--button-high-relevance-gradient);

    &:hover,
    &.active {
      background-image: none;
    }
  }

  &.outline {
    background: transparent;
    border-color: var(--button-high-relevance-outline-border-color);
    border-style: solid;
    border-width: var(--button-high-relevance-outline-border-width);
    color: var(--button-high-relevance-outline-color);

    &:hover,
    &:active,
    &:focus {
      color: var(--button-high-relevance-outline-color-enter);
    }

    &:hover,
    &:active {
      border-color: transparent;
    }

    &:focus:not(:active) {
      background-color: var(--button-high-relevance-outline-background-color-focus);
      border-color: var(--button-high-relevance-outline-border-color-focus);
      box-shadow: var(--button-high-relevance-outline-boxshadow-focus);
    }
  }

  &.clean {
    background: transparent;
    color: var(--button-high-relevance-clean-color);

    &:hover {
      color: var(--button-high-relevance-clean-color-hover);
    }

    &:active {
      color: var(--button-high-relevance-clean-color-active);
    }

    &:focus:not(:active) {
      color: var(--button-high-relevance-clean-color-focus);
    }
  }
}

.lowRelevance {

  &.flat,
  &.gradient,
  &.outline {

    &:hover {
      background-color: var(--button-low-relevance-background-color-hover);
    }

    &:active {
      background-color: var(--button-low-relevance-background-color-active);
    }
  }

  &.flat,
  &.gradient {

    &:focus:not(:active) {
      box-shadow: var(--button-low-relevance-boxshadow-focus);
    }
  }

  &.flat {
    background-color: var(--button-low-relevance-flat-background-color);
  }

  &.gradient {
    background-image: var(--button-low-relevance-gradient);

    &:hover,
    &.active,
    &.focus {
      background-image: none;
    }
  }

  &.outline {
    background: transparent;
    border-color: var(--button-low-relevance-outline-border-color);
    border-style: solid;
    border-width: var(--button-low-relevance-outline-border-width);
    color: var(--button-low-relevance-outline-color);

    &:hover,
    &:active,
    &:focus:not(:active) {
      color: var(--button-low-relevance-outline-color-enter);
    }

    &:hover,
    &:active {
      border-color: transparent;
    }

    &:focus:not(:active) {
      background-color: var(--button-low-relevance-outline-background-color-focus);
      border-color: var(--button-low-relevance-outline-border-color-focus);
      box-shadow: var(--button-low-relevance-outline-boxshadow-focus);
    }
  }

  &.clean {
    background: transparent;
    color: var(--button-low-relevance-clean-color);

    &:hover {
      color: var(--button-low-relevance-clean-color-hover);
    }

    &:active {
      color: var(--button-low-relevance-clean-color-active);
    }

    &:focus:not(:active) {
      color: var(--button-low-relevance-clean-color-focus);
    }
  }
}

/* disabled button style */

.button,
.gradient,
.clean,
.outline {

  &.button:disabled:hover,
  &.button:disabled {
    cursor: not-allowed;
    color: var(--button-disabled-color);
  }
}

.iconButton.outline,
.flat,
.gradient {

  &.button:disabled,
  &.button:disabled:hover {
    background-color: var(--button-disabled-background-color);
    background-image: none;
  }
}

.outline,
.clean {

  &.button:disabled,
  &.button:disabled:hover {
    background: transparent;
  }
}

.outline {

  &.button:disabled,
  &.button:disabled:hover {
    border-color: var(--button-disabled-background-color);
  }
}

